--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -1,11 +1,7 @@
 name: 'publish'
 
 on:
-  push:
-    branches:
-      - release
-
-# This workflow will trigger on each push to the `release` branch to create or update a GitHub release, build your app, and upload the artifacts to the release.
+  workflow_dispatch:  # Manual trigger from GitHub UI
 
 jobs:
   publish-tauri:
