--- a/.github/workflows/main-2025-07-28-11-56.yml
+++ b/.github/workflows/main-2025-07-28-11-56.yml
@@ -37,6 +37,9 @@ jobs:
 
       - name: Initialize Tauri project
         run: |
-          cargo-tauri init --ci --app-name "YouCanAlwaysGoBack" --window-title "You Can Always Go Back" --dist-dir "../dist" --dev-path "http://localhost:3000"
+          cargo-tauri init --ci --app-name "YouCanAlwaysGoBack" --window-title "You Can Always Go Back"
+          [ -d ios ] || cargo-tauri ios init
 
+      - name: Create iOS build
+        run: cargo-tauri ios build
 
