--- a/.github/workflows/main-2025-07-28-11-56.yml
+++ b/.github/workflows/main-2025-07-28-11-56.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: '18' # Or your required version
 
     - name: ListJim
-      run: list
+      run: ls
       
       - name: Initialize Tauri project
         run: |
