--- a/.github/workflows/main-2025-07-28-11-56.yml
+++ b/.github/workflows/main-2025-07-28-11-56.yml
@@ -11,6 +11,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Pre-create .cargo directory
+        run: mkdir -p $HOME/.cargo
+
+      - name: Pre-create .cargo directory
+        run: mkdir -p $HOME/.rustup
+
       - name: Cache Cargo registry, index, rustup, and build
         uses: actions/cache@v4
         with:
@@ -43,6 +49,9 @@ jobs:
           else
             echo "Tauri CLI is already cached"
           fi
+
+      - name: Check cached Cargo contents
+        run: ls -al $HOME/.cargo
       
       - name: Initialize Tauri project
         run: |
