--- a/.github/workflows/main-2025-07-28-11-56.yml
+++ b/.github/workflows/main-2025-07-28-11-56.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Pre-create .cargo directory
-        run: mkdir -p $HOME/.cargo
+        run: mkdir -p "$HOME/.cargo"
 
       - name: Pre-create .cargo directory
-        run: mkdir -p $HOME/.rustup
+        run: mkdir -p "$HOME/.rustup"
 
       - name: Cache Cargo registry, index, rustup, and build
         uses: actions/cache@v4
@@ -29,7 +29,7 @@ jobs:
             ${{ runner.os }}-cargo-complete-
       
       - name: Check cached Cargo contents
-        run: ls -al $HOME/.cargo
+        run: ls -al "$HOME/.cargo"
   
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -51,7 +51,7 @@ jobs:
           fi
 
       - name: Check cached Cargo contents
-        run: ls -al $HOME/.cargo
+        run: ls -al "$HOME/.cargo"
       
       - name: Initialize Tauri project
         run: |
