--- a/.github/workflows/main-2025-07-28-11-56.yml
+++ b/.github/workflows/main-2025-07-28-11-56.yml
@@ -9,8 +9,8 @@ jobs:
 
     steps:
       - name: Check HOME env
-        run: echo "HOME is: $HOME"
-  
+        run: echo $HOME
+      
       - name: Checkout repository
         uses: actions/checkout@v4
 
